--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello!</title>
+    <title>Hello, I'm Brian!</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/portfolio.css">
     <link rel="stylesheet" href="./styles/barchart.css"/>
     <link rel="stylesheet" href="./styles/projects.css"/>
+    <link rel="stylesheet" href="./styles/popup.css"/>
 </head>
 <body class="main">
     <div class="welcome">
@@ -29,6 +30,26 @@
                     <button class="fab fa-instagram-square" onclick="location.href='https://www.instagram.com/briancv_'" id="icon"></button>
                 </div>      
             </div>        
+        </div>
+    </div>
+    
+    <div class="skills">
+        <h1 style="font-size:32px; margin-bottom: 1rem; margin-top:2rem; text-align:center">Current Skills</h1>
+        <div class="placement">
+            <div class="chart">
+                <ul class="numbers">
+                    <li><span>Expert</span></li>
+                    <li><span>Proficient</span></li>
+                    <li><span>Familiar</span></li>
+                </ul>
+                <ul class="bars">
+                    <li><div class="bar" data-percentage="Proficient" style="height: 175px"></div><span>Python</span></li>
+                    <li><div class="bar" data-percentage="Familiar" style="height: 80px"></div><span>C++</span></li>
+                    <li><div class="bar" data-percentage="Familiar" style="height: 85px"></div><span>Javascript</span></li>
+                    <li><div class="bar" data-percentage="Familiar" style="height: 120px"></div><span>(React) Javascript</span></li>
+                    <li><div class="bar" data-percentage="Basic" style="height: 50px"></div><span>Java</span></li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -52,35 +73,19 @@
                 </div>                
             </div>
         </div>
-        <!-- <div class="read-more">
-            <div class="read-more-heading">
-                <div class="read-more-title"></div>
-                <button class="read-more-exit">&times;</button>
-            </div>
-
-            <div class="read-more-description"></div>
-        </div> -->
     </div>
 
-    <div class="skills">
-        <h1 style="font-size:32px; margin-bottom: 1rem; margin-top:2rem; text-align:center">Current Skills</h1>
-        <div class="placement">
-            <div class="chart">
-                <ul class="numbers">
-                    <li><span>Expert</span></li>
-                    <li><span>Proficient</span></li>
-                    <li><span>Familiar</span></li>
-                </ul>
-                <ul class="bars">
-                    <li><div class="bar" data-percentage="Proficient" style="height: 175px"></div><span>Python</span></li>
-                    <li><div class="bar" data-percentage="Proficient" style="height: 150px"></div><span>C++</span></li>
-                    <li><div class="bar" data-percentage="Familiar" style="height: 60px"></div><span>Javascript</span></li>
-                    <li><div class="bar" data-percentage="Familiar" style="height: 75px"></div><span>(React) Javascript</span></li>
-                    <li><div class="bar" data-percentage="Basic" style="height: 20px"></div><span>Java</span></li>
-                </ul>
-            </div>
+    <div id="read-more" class="read-more active">
+        <div class="read-more-heading">
+            <div class="read-more-title">Header</div>
+            <button class="read-more-exit">&times;</button>
         </div>
+        <div class="read-more-description">Text</div>
+        <div class="read-more-visuals"><img src="" id="rmimage" class="rmimage"/></div>
     </div>
+    <div class="overlay"></div>    
+
+
 
     <script src="./projects.js"></script>
 </body>
