--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,7 @@
                     <div class="pp-item" id="0">Algorithm Racing!</div><hr id="bar">
                     <div class="pp-item" id="1">eSports Tracker</div><hr id="bar">
                     <div class="pp-item" id="2">Questions From a Stranger</div><hr id="bar">
+                    <div class="pp-item" id="3">Covid-19 Simulator</div><hr id="bar">
                 </div>
                 <div class="pp-display">
                     <h1 class="pp-display-title">&uarr; Select a Category</h1>
