--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, I'm Brian!</title>
+    <title>portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/portfolio.css">
@@ -17,14 +17,12 @@
         <div class="introduction">
             <div class="introduction-pic-container"><img src="./pics/me.png" class="pic-me"></div>
             <div class="introduction-about">
-                <p style="margin: 2rem 2rem 0rem 2rem;" id="intro">Hello! My name is Brian Ventura. I am a third year computer science major
-                    at UCI looking for a software engineering internship. Eventually I want to find what interests me in the 
+                <p style="margin: 2rem 2rem 0rem 2rem;" id="intro">I am a third year computer science major
+                    at UCI seeking a software engineering internship. Eventually I want to find what interests me in the 
                     broad realm of computer science, but for now, I'm more focused on getting my foot through the door. Thanks for
                     stopping by!
                 </p>
-            </div>
-            <div class="introduction-socials">      
-            </div>        
+            </div>    
         </div>
     </div>
 
@@ -32,7 +30,7 @@
         <!-- <h1 style="font-size:32px; margin-bottom: 1rem; margin-top:2rem; text-align:center">View My Past Works!</h1> -->
         <div class="past-projects-inner">
             <div class="pp-topbar">
-                <button class="pp-pprojects" id="1">View my part works!</button>
+                <button class="pp-pprojects" id="1">Part works and favorite classes</button>
                 
             </div>
             <div class="pp-content">
@@ -53,7 +51,6 @@
     </div>
     
     <div class="skills">
-        <h1 style="font-size:32px; margin-bottom: 1rem; margin-top:2rem; text-align:center">Current Skills</h1>
         <div class="placement">
             <div class="chart">
                 <ul class="numbers">
