--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <div class="past-projects-inner">
             <div class="pp-topbar">
                 <button class="pp-pprojects" id="1">Part works and favorite classes</button>
-                
             </div>
             <div class="pp-content">
                 <div class="pp-directory">
@@ -82,11 +81,10 @@
 
     <div class="bottom-bar">
         <div class="socials">
-            <button class="fas fa-home" onclick="location.href='https://www.github.com/brianv212'" id="icon"></button>
-            <button class="fab fa-github-square" onclick="location.href='https://www.github.com/brianv212'" id="icon"></button>
+            <button class="fab fa-github-square" onclick="location.href='https://www.github.com/brianv212'" target="_blank" id="icon"></button>
             <button class="fab fa-linkedin" onclick="location.href='https://www.linkedin.com/in/brian-ventura-34a975197/'" id="icon"></button>
         </div>
-        <div class="website">https://brianventura.glitch.me</div>
+        <a onclick="location.href='https://brianventura.glitch.me'" class="website">https://brianventura.glitch.me</a>
     </div>
     <!-- <button class="changeUrl">See our projects</button> -->
     
